# hexdeck

./: .gitignore  README.md  RELEASE.md  ask-user-question-fix.md  index.html  package-lock.json  package.json  test-approval-detection.sh  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/workflows/: release.yml
docs/: activity-card-live-debug-runbook.md  terminal-jump-contract.md  tray-first-shell-plan.md
docs/superpowers/plans/: 2026-04-09-floating-activity-card.md
docs/superpowers/specs/: 2026-04-08-menu-dropdown-redesign-design.md  2026-04-09-floating-activity-card-design.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-icon-macos.rgba
src-tauri/src/: main.rs
src-tauri/src/commands/: broker.rs  mod.rs
src/app/: App.test.ts  App.test.tsx  App.tsx  local-broker-bootstrap.ts
src/app/routes/: activity-card.tsx  drag-demo.tsx  expanded.tsx  panel.tsx
src/features/activity-card/: ActivityCardHost.tsx  ActivityCardMarkdown.tsx  FloatingActivityCard.tsx
src/features/attention/: AttentionList.tsx
src/features/now/: NowList.tsx
src/features/onboarding/: OnboardingPanel.tsx
src/features/overview/: OverviewBar.tsx
src/features/project-selector/: ProjectSelector.tsx
src/features/recent/: RecentList.tsx
src/features/settings/: SettingsPanel.test.tsx  SettingsPanel.tsx
src/lib/activity-card/: popup-candidates.ts  popup-session.ts  projections.ts  store.ts  types.ts
src/lib/broker/: channels.ts  client.ts  liveness.ts  runtime.ts  types.ts
src/lib/jump/: targets.ts  types.ts
src/lib/platform/: capabilities.ts  notifications.ts  shortcut.ts  window-controls.ts
src/lib/platform/jump/: index.ts
src/lib/platform/jump/mac/: alias-fallback.ts  ghostty.ts  iterm.ts  terminal-app.ts  transport.ts
src/lib/projections/: priorities.ts  project-snapshot.ts  recent-feed.ts  types.ts
src/lib/settings/: local-settings.ts
src/lib/store/: app-store.ts  use-app-store.ts
src/lib/update/: broker-updater.ts  hexdeck-updater.ts  types.ts
src/styles/: panel.css  tokens.css
tests/app/: local-broker-bootstrap.test.ts
tests/app/routes/: expanded.test.tsx
tests/features/activity-card/: activity-card.test.tsx
tests/features/panel/: panel.test.tsx
tests/lib/activity-card/: popup-candidates.test.ts  popup-session.test.ts  projections.test.ts  store.test.ts
tests/lib/broker/: client.test.ts
tests/lib/jump/: targets.test.ts
tests/lib/platform/: jump.test.ts
tests/lib/projections/: project-snapshot.test.ts  recent-feed.test.ts
tests/lib/store/: app-store.test.ts
tests/lib/update/: broker-updater.test.ts
