[package]
name = "hexdeck"
version = "0.2.6"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "=1.0.215", features = ["derive"] }
serde_json = "=1.0.133"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "time"] }
flate2 = "1"
tar = "0.4"
chrono = "0.4"
rusqlite = { version = "=0.31.0", features = ["bundled"] }
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
image = { version = "=0.25.9", default-features = false, features = ["png"] }
objc2-app-kit = { version = "0.2.2", features = ["NSResponder", "NSWindow"] }
